Kubernetes/algo-fluent-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      
    - name: backend
      protocol: TCP
      port: 81
      targetPort: 81
